Fixed some misalignments when using paragraphs

--- a/src/styles/modules/about.styl
+++ b/src/styles/modules/about.styl
@@ -2,6 +2,10 @@
 	margin-top 15px
 	clearfix()
 	
+	p
+		line-height 1.25em
+		margin 0 auto 1em
+	
 	&.column3
 		div
 			width 310px
@@ -28,6 +32,8 @@
 				
 			img
 				width 100%
+				margin-bottom 15px
+				display block
 				
 	&.column1
 		div
